generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-arm64-openssl-3.0.x", "debian-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL_GCP")
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model UserActivity {
  activityId   String           @id @default(dbgenerated("gen_random_uuid()")) @map("activity_id") @db.Uuid
  userId       String?          @map("user_id")
  activityType UserActivityType @map("activity_type")
  description  String?
  timestamp    DateTime?        @default(now()) @db.Timestamp(6)
  metadata     Json?            @default("{}")

  @@map("user_activity")
}

model UserProfile {
  userId          String            @id @default(dbgenerated("gen_random_uuid()")) @map("user_id") @db.Uuid
  email           String            @unique
  username        String            @unique
  password        String
  firstName       String            @map("first_name")
  lastName        String            @map("last_name")
  userType        UserType          @default(USER) @map("user_type")
  status          UserProfileStatus
  createdAt       DateTime?         @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt       DateTime?         @default(now()) @map("updated_at") @db.Timestamp(6)
  virtualMachines VirtualMachine[]
  publicKeys      VmPublicKey[]
  messages        Message[]

  @@map("user_profile")
}

model VirtualMachine {
  vmId         String         @id @default(dbgenerated("gen_random_uuid()")) @map("vm_id") @db.Uuid
  userId       String         @map("user_id") @db.Uuid
  templateId   String         @map("template_id") @db.Uuid
  vmName       String         @map("vm_name")
  ipv4Address  String?        @map("ipv4_address")
  ipv6Address  String?        @map("ipv6_address")
  status       VmStatus       @map("status")
  publicKeyId  String         @map("public_key_id") @db.Uuid
  duration     Int            @map("duration")
  ipRanges     String[]       @map("ip_ranges")
  metadata     Json?          @default("{}") @map("metadata")
  startedAt    DateTime?      @map("started_at") @db.Timestamp(6)
  createdAt    DateTime       @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt    DateTime       @default(now()) @map("updated_at") @db.Timestamp(6)
  publicKey    VmPublicKey    @relation(fields: [publicKeyId], references: [keyId])
  vmTemplate   VmTemplate     @relation(fields: [templateId], references: [templateId], onUpdate: NoAction)
  userProfile  UserProfile    @relation(fields: [userId], references: [userId], onDelete: Cascade, onUpdate: NoAction)
  vmEvents     VmEvent[]
  messages     Message[]
  ProvisionLog ProvisionLog[]

  @@map("virtual_machine")
}

model VmEvent {
  eventId        String          @id @default(dbgenerated("gen_random_uuid()")) @map("event_id") @db.Uuid
  vmId           String?         @map("vm_id") @db.Uuid
  eventType      VmEventType     @map("event_type")
  description    String?
  timestamp      DateTime?       @default(now()) @db.Timestamp(6)
  virtualMachine VirtualMachine? @relation(fields: [vmId], references: [vmId], onDelete: Cascade, onUpdate: NoAction)

  @@map("vm_event")
}

model VmTemplate {
  templateId      String           @id @default(dbgenerated("gen_random_uuid()")) @map("template_id") @db.Uuid
  templateName    String           @map("template_name")
  falvorName      String           @default("") @map("flavor_name")
  providerId      String           @map("provider_id") @db.Uuid
  cpu             Int              @map("cpu")
  ram             Int              @map("ram")
  storage         Int              @map("storage")
  os              String           @map("os")
  description     String?          @map("description")
  metadata        Json?            @default("{}") @map("metadata")
  enabled         Boolean          @default(true)
  createdAt       DateTime?        @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt       DateTime?        @default(now()) @map("updated_at") @db.Timestamp(6)
  virtualMachines VirtualMachine[]
  provider        Provider         @relation(fields: [providerId], references: [providerId], onDelete: NoAction, onUpdate: NoAction)

  @@map("vm_template")
}

model Provider {
  providerId   String       @id @default(dbgenerated("gen_random_uuid()")) @map("provider_id") @db.Uuid
  providerName String       @unique @map("provider_name")
  description  String?      @map("description")
  createdAt    DateTime?    @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt    DateTime?    @default(now()) @map("updated_at") @db.Timestamp(6)
  enabled      Boolean      @default(true)
  displayOrder Int          @default(0) @map("display_order")
  VmTemplate   VmTemplate[]

  @@map("provider")
}

model VmPublicKey {
  keyId           String           @id @default(dbgenerated("gen_random_uuid()")) @map("key_id") @db.Uuid
  publicKey       String           @map("public_key")
  createdAt       DateTime?        @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt       DateTime?        @default(now()) @map("updated_at") @db.Timestamp(6)
  userId          String?          @map("user_id") @db.Uuid
  name            String           @map("name")
  virtualMachines VirtualMachine[]
  userProfile     UserProfile?     @relation(fields: [userId], references: [userId], onDelete: Cascade, onUpdate: NoAction)

  @@map("vm_public_key")
}

model Message {
  messageId      String               @id @default(dbgenerated("gen_random_uuid()")) @map("message_id") @db.Uuid
  queueName      String               @map("queue_name")
  message        String               @map("message")
  userId         String?              @map("user_id") @db.Uuid
  vmId           String?              @map("vm_id") @db.Uuid
  metadata       String?              @default("{}") @map("metadata")
  status         MessagePublishStatus @map("status")
  createdAt      DateTime?            @default(now()) @map("created_at") @db.Timestamp(6)
  updatedAt      DateTime?            @default(now()) @map("updated_at") @db.Timestamp(6)
  virtualMachine VirtualMachine?      @relation(fields: [vmId], references: [vmId], onDelete: Cascade, onUpdate: NoAction)
  userProfile    UserProfile?         @relation(fields: [userId], references: [userId], onDelete: Cascade, onUpdate: NoAction)

  @@map("message")
}

model ProvisionLog {
  logId          String          @id @default(dbgenerated("gen_random_uuid()")) @map("log_id") @db.Uuid
  queueName      String          @map("queue_name")
  vmId           String?         @map("vm_id") @db.Uuid
  action         String          @map("action")
  logMessage     Json            @map("log_message")
  timestamp      DateTime        @default(now()) @db.Timestamp(6)
  virtualMachine VirtualMachine? @relation(fields: [vmId], references: [vmId], onDelete: Cascade, onUpdate: NoAction)

  @@map("provision_log")
}

model AppUrl {
  urlId     String    @id @default(dbgenerated("gen_random_uuid()")) @map("url_id") @db.Uuid
  action    UrlAction @map("action")
  token     String    @unique @map("token")
  usedAt    DateTime? @map("used_at")
  createdAt DateTime  @default(now()) @map("created_at") @db.Timestamp(6)
  expiresAt DateTime? @map("expires_at") @db.Timestamp(6)
  updatedAt DateTime  @default(now()) @map("updated_at") @db.Timestamp(6)
  metadata  Json?     @default("{}") @map("metadata")

  @@map("app_url")
}

enum UserType {
  SUPER_ADMIN
  ADMIN
  USER
}

enum UserProfileStatus {
  ACTIVE
  DISABLED
  PENDING_DELETION
  DELETED
}

enum UserActivityType {
  USER_CREATED
  USER_LOGIN_SUCCESS
  USER_LOGIN_FAILED
  USER_LOGGED_OUT
  USER_DELETION_REQUESTED
  USER_DELETED
  USER_UPDATED
  USER_TOKEN_REFRESHED
  USER_TOKEN_REFRESH_FAILED
  VM_CREATION_REQUESTED
  VM_DESTROY_REQUESTED
}

enum VmEventType {
  PROVISIONING_REQUESTED
  PROVISIONING_QUEUED
  PROVISIONING_STARTED
  PROVISIONING_COMPLETED
  PROVISIONING_FAILED
  DESTROYING_REQUESTED
  RUNNING
  STOPPED
  SHUTDOWN
  UNKNOWN
}

enum VmStatus {
  UNKNOWN
  TO_BE_PROVISIONED
  PLANNING
  PLANNING_COMPLETED
  PROVISIONING
  PROVISIONING_COMPLETED
  PROVISIONING_FAILED
  INITIALIZING
  RUNNING
  STOPPED
  SHUTDOWN
  TO_BE_DESTROYED
  DESTROYING
  DESTROYED
}

enum MessagePublishStatus {
  PENDING
  PUBLISHED
  FAILED
}

enum UrlAction {
  NOTIFY_VM_INITIALIZE_START
  NOTIFY_VM_INITIALIZE_COMPLETE
  NOTIFY_VM_DESTROY_START
  NOTIFY_VM_JUPYTERNOTEBOOK_INIT_START
  NOTIFY_VM_JUPYTERNOTEBOOK_INIT_COMPLETE
}
